--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,10 +6,18 @@
     <servlet>
         <servlet-name>BaseServlet</servlet-name>
         <servlet-class>com.yhs.blog.servlet.BaseServlet</servlet-class>
-
     </servlet>
     <servlet-mapping>
         <servlet-name>BaseServlet</servlet-name>
         <url-pattern>/huajingtong.sunhao</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UserLoginServlet</servlet-name>
+        <servlet-class>com.yhs.blog.servlet.UserLoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UserLoginServlet</servlet-name>
+        <url-pattern>/userLogin</url-pattern>
     </servlet-mapping>
 </web-app>
